Fix wrapping of website link in event page

--- a/app/components/ItemCard/styles.module.css
+++ b/app/components/ItemCard/styles.module.css
@@ -17,7 +17,3 @@
 .itemCard p {
   margin-top: 1rem;
 }
-
-.website {
-  float: right;
-}
